fix(QBtn): Fix button alignment for type="a" #5645

--- a/ui/src/components/btn/QBtn.styl
+++ b/ui/src/components/btn/QBtn.styl
@@ -20,7 +20,6 @@
   a&
     display inline-flex
     flex-direction column
-    align-items center
 
   .q-icon, .q-spinner
     font-size $button-line-height
